--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,30 +2,54 @@
   margin: 0;
   padding: 0;
   outline: 0;
+  box-sizing: border-box;
+  overflow-y: hidden;
 }
 
-html, body {margin: 0; height: 100%; overflow: hidden}
-
 header {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(5, 5, 5);
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 100%;
+  height: 5.2rem;
+  justify-content: space-evenly;
+}
+
+.header-title {
+  font-size: 1.3em;
+  font-weight: 400;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+}
+
+.headerlist {
+  list-style: none;
+  display: flex;
+  color: white;
+  font-weight: 600;
+  font-size: 1.2rem;
+  vertical-align: center;
+  text-align: center;
+  margin-left: -5.3rem;
+  gap: 3rem;
+}
+
+.headerlist a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .listaicones {
-  gap: 0 35px;
   align-items: center;
   list-style: none;
   display: flex;
+  gap: 1rem;
 }
 
-.icones:hover {
-  transform: scale(1.2);
-  transition: transform 0.5s ease, margin 0.5s ease;
-  margin: 0 5px;
-}
-.icones:not(:hover) {
-  transition: transform 0.4s ease-out, margin 0.5s ease-out;
+.headeritemlist:hover {
+  color: rgb(188, 188, 188);
+  transition: 0.5s ease;
 }
