--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-*{
+body {
   margin: 0;
   padding: 0;
   outline: 0;
@@ -11,7 +11,6 @@ header {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 5.2rem;
   justify-content: space-evenly;
 }
 
@@ -24,7 +23,10 @@ header {
 a {
   text-decoration: none;
 }
-
+.close-menu {
+  display: none;
+  color: white;
+}
 .headerlist {
   list-style: none;
   display: flex;
@@ -33,7 +35,6 @@ a {
   font-size: 1.2rem;
   vertical-align: center;
   text-align: center;
-  margin-left: -5.3rem;
   gap: 3rem;
 }
 
@@ -52,4 +53,41 @@ a {
 .headeritemlist:hover {
   color: rgb(188, 188, 188);
   transition: 0.5s ease;
+}
+
+.imagem-monomito {
+  width: 100%!important;
+}
+
+@media (max-width: 768px) {
+  header {
+    display: flex;
+
+    flex-direction: column;
+  }
+
+  .headerlist {
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    gap: 0;
+    width: 100%;
+    padding-left: 0 ;
+    background-color: red;
+  }  
+  .headerlist a {
+    width: 100%;
+    display: flex;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .headerlist li {
+    text-align: center;
+    width: 100%;
+    display: block;
+  }
+  
+  .close-menu {
+    display: block;
+  } 
 }
