--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,14 +22,15 @@ header {
   align-items: center;
   width: 100%;
   justify-content: space-evenly;
-  padding: 1rem 0rem;
+  padding: 0.85rem 0rem;
 }
 
 .header-title {
   font-family: PhonkFont;
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: 400;
   color: white;
+  padding-left: 2rem;
 }
 
 .openclose {
@@ -47,13 +48,15 @@ a {
   display: flex;
   color: white;
   font-weight: 600;
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   text-align: center;
-  gap: 0 1.5rem;
-  padding-left: 0;
+  padding-left: 1rem;
+  padding-right: 6rem;
+  overflow: hidden;
 }
 
 .headerlist a {
+  width: 90px;
   text-decoration: none;
   color: inherit;
 }
@@ -68,7 +71,8 @@ a {
   list-style: none;
   display: flex;
   padding-left: 0;
-  gap: 0.6rem;
+  gap: 1rem;
+  padding-right: 4.5rem;
 }
 
 .headeritemlist:hover {
@@ -79,6 +83,13 @@ a {
 .imagem-monomito {
   width: 100%!important;
 }
+
+@media (max-width: 946px) {
+  .headerlist {
+    padding-left: 5rem;
+  }
+}
+
 
 @media (max-width: 768px) {
   header {
@@ -108,6 +119,7 @@ a {
     margin: 0 auto;
     gap: 0;
     width: 100%;
+    padding: 0;
   }  
   .headerlist a {
     width: 100%;
@@ -120,4 +132,10 @@ a {
     width: 100%;
     display: block;
   }
+
+  .listaicones {
+    padding-right: 0;
+  }
+
+
 }
