--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,6 +146,7 @@ a {
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+  background-color: rgb(177, 177, 177);
 }
 
 .section-two a {
@@ -153,19 +154,9 @@ a {
   height: 100%;
 }
 
-.imagem-section-two{
+.imagem-section-two {
   font-size: 0;
   text-decoration: none;
-}
-
-.overlay {
-  position: absolute;
-  width: 26.5rem;
-  height: 15rem;
-  background-color: rgba(0, 0, 0, 0.758);
-  display: flex;
-  justify-content: center;
-  z-index: 999;
 }
 
 .section-two a {
@@ -173,7 +164,8 @@ a {
 }
 
 .imagem-section-two:hover {
-  color: black;
+  opacity: 0.5;
+  cursor: pointer;
 }
 
 
