--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,8 +99,7 @@ a {
 
 /* Seção 1 */
 .section-one {
-  position: relative;
-  width: 100vw;
+  width: 100%;
   height: 70vh;
   background-image: url('/monomito_section_um.jpg');
   background-position: center;
@@ -138,7 +137,24 @@ a {
   color: white;
 }
 
-/*seção 3*/
+.logo_monomito_section_um {
+  display: flex;
+  flex-direction: column-reverse;
+  width: 100vw;
+  justify-content: end;
+  align-items: end;
+}
+
+.logo_monomito_um {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    margin-bottom: 3vh;
+    margin-right: 3vh;
+}
+
+
+/*seção 2*/
 
 .section-two {
   display: grid;
@@ -171,7 +187,7 @@ a {
 
 @media (max-width: 768px) {
   .cabecalho {
-    display: block;
+    display: none;
     overflow: hidden;
     }
 
@@ -219,18 +235,16 @@ a {
   }
 
   .section-one {
-    display: block;
-    padding: 0;
-    line-height: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .section-one--box-text {
+    margin-left: 0;
   }
 
   .section-one-title{
-    padding-top: 17rem;
-    display: block;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .section-one h1 {
@@ -249,6 +263,20 @@ a {
     line-height: 5vw;
     font-family: BebasKaiFont;
     color: white;
+  }
+
+  .logo_monomito_section_um {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .logo_monomito_um{
+    margin: 0%;
+    margin-top: 2%;
+    width: 6rem;
+    height: 6rem;
   }
 
   .section-two {
