--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -205,8 +205,25 @@ a {
   width: 8.7vw;
   height: 2.2vw;
   border-radius: 2px;
+  cursor: pointer;
 }
 
+.embed-video {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* Proporção de aspecto de 16:9 (9 dividido por 16 multiplicado por 100) */
+  overflow: hidden;
+}
+
+.embed-video {
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100.1%;
+}
+}
 
 
 
