--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -215,19 +215,13 @@ a {
   overflow: hidden;
 }
 
-.embed-video {
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100.1%;
+.embed-video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100.1%;
 }
-}
-
-
-
-
 
 @media (max-width: 768px) {
   .cabecalho {
