feat: creating floating whatsapp button, not found page, about page and contact page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,14 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 .content-page {
   padding-top: 5rem;
 }
@@ -44,6 +52,54 @@
   height: 100.1%;
 }
 
+.not_found {
+  width: 100%;
+  height: 65dvh;
+  background-color: #000;
+  color: #FFF;
+}
+
+.not_found_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.not_found_wrapper h2 {
+  font-family: BebasKaiFont;
+  text-align: center;
+}
+.not_found_wrapper h3 {
+  margin-top: 120px;
+  font-family: PhonkFont;
+  font-size: 70px;
+  text-align: center;
+}
+
+.not_found_wrapper button {
+  width: 220px;
+  height: 60px;
+  background: #222;
+  border: none;
+  outline: none;
+  margin-top: 16px;
+}
+
+.not_found_wrapper button a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-family: PhonkFont;
+  font-size: 18px;
+  text-decoration: none;
+  color: #FFF;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -55,20 +111,29 @@
   align-items: center;
   font-size: 18px;
   text-align: center;
-  background: #030303;
+  background: #000;
   color: #FFF;
-  height: 500px !important;
 }
 
 .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .swiper-button-prev,
 .swiper-button-next,
 .swiper-pagination {
   color: #FFF !important;
+}
+
+@media only screen and (max-width: 768px) {
+  .content-page {
+    padding-top: 0;
+  }
+
+  .swiper-slide img {
+    object-fit: none;
+  }
 }
