--- a/src/components/common/header/styles.module.css
+++ b/src/components/common/header/styles.module.css
@@ -4,8 +4,6 @@
   align-items: center;
   width: 100vw;
   justify-content: space-evenly;
-  padding-top: 1.7rem;
-  padding-bottom: 1.7rem;
   padding-left: 0;
   padding-right: 0;
   background-color: rgb(0, 0, 0);
@@ -36,7 +34,7 @@
   display: flex;
   color: white;
   font-weight: 600;
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   text-align: center;
   overflow: hidden;
   gap: 2.2rem;
@@ -58,6 +56,10 @@
   padding-top: 4px;
 }
 
+.icons svg {
+  font-size: 20px;
+}
+
 .headeritemlist:hover {
   color: rgb(188, 188, 188);
   transition: 0.5s ease;
@@ -65,10 +67,6 @@
 
 @media only screen and (max-width: 768px) {
   .header {
-    flex-direction: column;
-  }
-
-  .header_list {
-    margin-top: 20px;
+    display: none;
   }
 }
