--- a/src/components/common/section-about-monomito/styles.module.css
+++ b/src/components/common/section-about-monomito/styles.module.css
@@ -24,21 +24,34 @@
 }
 
 .about_monomito p {
-  font-size: 1.8vh;
-  font-family: BebasKaiFont;
+  font-size: 15px;
   font-weight: 100;
-  padding: 0.3rem 0rem;
+  padding: 0.3rem 0rem 0.8rem;
 }
 
 .about_monomito h1 {
-  font-size: 2vh;
+  font-size: 4vh;
   padding-bottom: 1.4%;
   font-family: PhonkFont;
   text-transform: uppercase;
 }
 
+.about_monomito strong {
+  font-family: BebasKaiFont;
+  font-size: 2.6vh;
+  margin-top: 20px;
+}
+
 @media only screen and (max-width: 768px) {
   .about_monomito {
     padding: 10% 7%;
+  }
+
+  .about_monomito h1 {
+    padding-bottom: 6.4%;
+  }
+
+  .about_monomito p {
+    padding: 0.3rem 0rem 0.5rem;
   }
 }
