--- a/src/components/common/whatsapp-button/styles.module.css
+++ b/src/components/common/whatsapp-button/styles.module.css
@@ -1,6 +1,6 @@
-.scroll_top {
+.whatsappButton {
     position: fixed;
-    bottom: 40px;
+    bottom: 120px;
     right: 40px;
     width: 68px;
     height: 68px;
@@ -8,28 +8,28 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background: #040404;
+    background: #25D366;
     cursor: pointer;
     border: none;
     box-shadow: 5px 5px 5px 0px rgba(34 ,34 ,34 ,0.75);
     z-index: 9;
 }
 
-.scroll_top svg {
-    color: #FFF;
+.whatsappButton svg {
+    color: #000;
     width: 40px;
     height: 40px;
 }
 
 @media only screen and (max-width: 768px) {
-    .scroll_top {
-        bottom: 25px;
+    .whatsappButton {
+        bottom: 85px;
         right: 15px;
         width: 50px;
         height: 50px;
     }
 
-    .scroll_top svg {
+    .whatsappButton svg {
         width: 25px;
         height: 25px;
     }
