--- a/src/components/homepage/section-two/styles.module.css
+++ b/src/components/homepage/section-two/styles.module.css
@@ -4,8 +4,7 @@
 
 .section_two_card {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     background-color: rgb(0, 0, 0);
@@ -25,13 +24,14 @@
 }
 
 .section_two_card_image:hover {
-  opacity: 0.3;
+  opacity: 1;
   cursor: pointer;
   transition: 0.5s;
 }
 
 .section_two_card_image:not(:hover) {
   transition: 0.8s;
+  opacity: 0.4;
 }
 
 .section_two_see_more {
@@ -44,17 +44,29 @@
 
 .section_two_see_more_button {
   font-family: BebasKaiFont;
-  font-size: 1vw;
+  font-size: 22px;
   border: none;
-  width: 8.7vw;
-  height: 2.2vw;
+  padding: 14px 40px;
   border-radius: 2px;
   cursor: pointer;
+}
+
+.section_two_see_more_button a {
+  text-decoration: none;
+  color: #000;
 }
 
 @media only screen and (max-width: 768px) {
   .section_two_card {
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+  }
+
+  .section_two_see_more {
+    padding: 30px 0;
+  }
+  
+  .section_two_see_more_button {
+    font-size: 16px;
+    padding: 8px 26px;
   }
 }
