--- a/src/components/projectpage/gallery/styles.module.css
+++ b/src/components/projectpage/gallery/styles.module.css
@@ -5,14 +5,15 @@
 }
 
 .section_gallery h2 {
-    padding: 60px 0 20px;
+    padding: 60px 0 90px;
+    font-family: PhonkFont;
+    text-align: center;
     color: #FFF;
 }
 
 .section_gallery_grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     background-color: #000;
@@ -31,4 +32,15 @@
 
 .section_gallery_grid_image:not(:hover) {
     transition: 0.8s;
+}
+
+@media only screen and (max-width: 768px) {
+    .section_gallery h2 {
+        font-size: 20px;
+        padding: 0px 0px 30px;
+    }
+
+    .section_gallery_grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
