--- a/src/components/about/content/styles.module.css
+++ b/src/components/about/content/styles.module.css
@@ -50,7 +50,7 @@
 }
 
 .about_description {
-    margin-top: 120px;
+    margin: 120px 0;
     width: 100%;
 }
 
@@ -72,14 +72,49 @@
     color: #FFF;
 }
 
-@media only screen and (max-width: 768px) {
-    .about {
-        padding: 30px 0;
-    }
+.about_lastYears {
+    padding: 20px 0;
+}
 
+.about_lastYears h2 {
+    font-family: PhonkFont;
+    font-size: 3rem;
+    font-weight: bold;
+    color: #FFF;
+}
+
+.about_lastYears_texts h3 {
+    margin: 44px 0 14px;
+    font-family: PhonkFont;
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #FFF;
+}
+
+.about_lastYears_texts ul {
+    list-style: disc;
+    font-size: 32px;
+    color: #fff;
+}
+
+.about_lastYears_texts p {
+    margin: 20px 0;
+    width: 60%;
+    font-size: 1.3rem;
+    font-weight: 400;
+    color: #FFF;
+}
+
+@media only screen and (max-width: 767px) {
     .about_logo img {
         width: 80%;
         height: 210px;
+    }
+}
+
+@media only screen and (max-width: 1023px) {
+    .about {
+        padding: 30px 0;
     }
 
     .about_shortDescription {
@@ -95,7 +130,7 @@
     }
     
     .about_description {
-        margin-top: 50px;
+        margin: 50px 0;
     }
 
     .about_description h2 {
@@ -109,6 +144,20 @@
     .about_description_texts p {
         width: 100%;
         font-size: 15px;
+    }
+
+    .about_lastYears h2 {
+        font-size: 2rem;
+    }
+
+    .about_lastYears_texts h3 {
+        margin: 38px 0 0px;
+        font-size: 1.4rem;
+    }
+
+    .about_lastYears_texts p {
+        width: 100%;
+        font-size: 1rem;
     }
 
 }
