--- a/src/components/common/header-mobile/styles.module.css
+++ b/src/components/common/header-mobile/styles.module.css
@@ -20,6 +20,12 @@
     box-sizing: border-box;
 }
 
+.header_mobile_logo a {
+    font-family: BebasKaiFont;
+    font-size: 15px;
+    color: #FFF;
+}
+
 .header_mobile_logo img {
     cursor: pointer;
 }
@@ -46,13 +52,19 @@
     left: 0;
     width: 100%;
     height: 100dvh;
+    transform: translateX(140%);
     padding: 20px 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     background: #000;
+    transition: transform 0.7s;
     z-index: 99;
+}
+
+.active {
+    transform: translateX(0px);
 }
 
 .menu_close {
