--- a/src/components/common/section-our-achievments/page.module.css
+++ b/src/components/common/section-our-achievments/page.module.css
@@ -11,8 +11,35 @@
 .our_achievements_title {
   width: 80%;
   margin: 0 auto 0;
+}
+
+.our_achievements_title h1 {
   font-family: PhonkFont;
   font-size: 3rem;
+}
+
+.our_achievements_title p {
+  margin: 30px 0 32px;
+  width: 40%;
+  font-size: 17px;
+  color: #FFF;
+}
+
+.our_achievements_title a {
+  margin-top: 30px;
+  padding: 10px 30px;
+  background-color: #FFF;
+  font-family: BebasKaiFont;
+  font-size: 26px;
+  font-weight: bold;
+  color: #000;
+  transition: all .3s;
+  cursor: pointer;
+}
+
+.our_achievements_title a:hover {
+  background-color: #333;
+  color: #FFF;
 }
 
 .our_achievements_allinfos {
@@ -31,10 +58,17 @@
 }
 
 .our_achievements_allinfos_container_achievements h1 {
-  font-size: 27px;
   padding-bottom: 5px;
   padding-top: 23px;
   display: flex;
+  font-size: 27px;
+  color: #25D366;
+}
+
+.our_achievements_allinfos_container_achievements ul {
+  list-style: disc;
+  font-size: 32px;
+  color: #FFF;
 }
 
 .our_achievements_allinfos_container_achievements h1 span {
@@ -50,7 +84,7 @@
   width: 100px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   .our_achievements_wrapper {
     padding: 2rem 0;
   }
@@ -61,7 +95,20 @@
   }
 
   .our_achievements_title {
+    width: 90%;
+  }
+
+  .our_achievements_title h1 {
     font-size: 2rem;
+  }
+
+  .our_achievements_title p {
+    width: 100%;
+  }
+
+  .our_achievements_title a {
+    display: flex;
+    justify-content: center;
   }
 
   .page_our_achievements_wrapper {
