--- a/src/components/contact/styles.module.css
+++ b/src/components/contact/styles.module.css
@@ -67,12 +67,13 @@
     border: 0;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
     .contact {
         padding: 30px 0 60px;
     }
 
     .contact_wrapper {
+        width: 90%;
         flex-direction: column;
     }
 
