--- a/src/components/common/header-mobile/styles.module.css
+++ b/src/components/common/header-mobile/styles.module.css
@@ -53,7 +53,7 @@
     width: 100%;
     height: 100dvh;
     transform: translateX(140%);
-    padding: 20px 0;
+    padding: 10px 0 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -71,7 +71,13 @@
     padding: 0 15px;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+}
+
+.menu_close a {
+    font-family: BebasKaiFont;
+    font-size: 15px;
+    color: #FFF;
 }
 
 .menu_close button {
