--- a/src/components/projectpage/artist/lightbox/styles.module.css
+++ b/src/components/projectpage/artist/lightbox/styles.module.css
@@ -2,6 +2,9 @@
     position: fixed;
     top: 0;
     left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
     height: 100dvh;
     background-color: #000;
@@ -9,9 +12,13 @@
 }
 
 .lightbox_close {
+    position: absolute;
+    top: 0;
+    right: 0;
     display: flex;
     justify-content: flex-end;
     padding: 20px 20px 0;
+    z-index: 9;
 }
 
 .lightbox_close button {
