--- a/src/components/homepage/section-brands/styles.module.css
+++ b/src/components/homepage/section-brands/styles.module.css
@@ -1,32 +1,32 @@
 .section_brands {
     padding: 60px 0 80px;
     width: 100%;
-    background-color: #000;
+    background-color: #FFF;
 }
 
 .section_brands_title {
-    margin-bottom: 7rem;
+    margin-bottom: 3rem;
 }
 
 .section_brands_title h2 {
     font-family: PhonkFont;
     font-size: 3rem;
     text-align: center;
-    color: #FFF;
+    color: #000;
 }
 
 .section_brands_wrapper {
     margin: 0 auto;
     width: 80%;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    place-items: center;
-    gap: 40px;
+    height: 700px;
 }
 
 .section_brands_item {
-    filter: grayscale(1);
+    /* filter: grayscale(1); */
+    position: relative;
     transition: all .5s;
+    width: 100%;
+    height: 100%;
 }
 
 .section_brands_item:hover {
