--- a/src/components/team/gallery/styles.module.css
+++ b/src/components/team/gallery/styles.module.css
@@ -44,8 +44,9 @@
 
 .teamGallery_picture img {
     width: 100%;
-    height: 300px;
+    height: 400px;
     object-fit: cover;
+    object-position: center;
 }
 
 .teamGallery_info {
@@ -69,11 +70,10 @@
     color: #FFF;
 }
 
-.teamGallery_item > p {
+.teamGallery_item p {
     margin: 22px auto 0;
-    width: 70%;
+    width: 90%;
     font-size: 1rem;
-    text-align: center;
     color:#FFF;
 }
 
@@ -109,11 +109,10 @@
     width: 85%;
 }
 
-.teamGallery_overlay_description > p {
+.teamGallery_overlay_description p {
     margin-top: 10px;
     font-size: 14px;
     font-weight: 400;
-    text-align: center;
     color: #FFF;
 }
 
