--- a/src/components/common/section-about-monomito/styles.module.css
+++ b/src/components/common/section-about-monomito/styles.module.css
@@ -1,21 +1,6 @@
 .about_monomito {
   position: relative;
-  background-color: rgba(9, 9, 9, 0.977);
-}
-
-.about_monomito::before {
-  content: "";
-  background-image: url("/sobre-bg-monomito.JPEG");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: fixed;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  z-index: -10;
-  opacity: 100%;
+  background-color: #030303;
 }
 
 .about_monomito {
