--- a/src/components/homepage/section-brands/styles.module.css
+++ b/src/components/homepage/section-brands/styles.module.css
@@ -18,15 +18,19 @@
 .section_brands_wrapper {
     margin: 0 auto;
     width: 80%;
-    height: 700px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    place-items: baseline;
+    gap: 40px;
 }
 
 .section_brands_item {
-    /* filter: grayscale(1); */
     position: relative;
     transition: all .5s;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .section_brands_item:hover {
