--- a/src/components/homepage/section-two/styles.module.css
+++ b/src/components/homepage/section-two/styles.module.css
@@ -1,42 +1,43 @@
 .section_two {
-    
 }
 
 .section_two_card {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    background-color: rgb(0, 0, 0);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  background-color: rgb(0, 0, 0);
 }
 
 .section_two a {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .section_two_card_image {
   text-decoration: none;
 }
 
-.section-two a {
-  height: 0;
+.section_two_card button {
+  overflow: hidden;
+  background: none;
+  border: none;
+  outline: none;
 }
 
 .section_two_card_image:hover {
-  opacity: 1;
+  transform: scale(1.25);
   cursor: pointer;
   transition: 0.5s;
 }
 
 .section_two_card_image:not(:hover) {
-  transition: 0.8s;
-  opacity: 0.4;
+  transition: 0.5s;
+  transform: scale(1.1);
+  overflow: hidden;
 }
 
 .section_two_see_more {
-  display: flex;
-  justify-content: center;
   background-color: #000;
   padding: 3.5vw 0;
   width: 100%;
@@ -48,7 +49,7 @@
   font-weight: bold;
   border: none;
   padding: 14px 40px;
-  transition: all .3s;
+  transition: all 0.3s;
   cursor: pointer;
 }
 
@@ -57,10 +58,12 @@
 }
 
 .section_two_see_more_button:hover a {
-  color: #FFF;
+  color: #fff;
 }
 
 .section_two_see_more_button a {
+  display: flex;
+  justify-content: center;
   text-decoration: none;
   color: #000;
 }
@@ -73,7 +76,7 @@
   .section_two_see_more {
     padding: 30px 0;
   }
-  
+
   .section_two_see_more_button {
     font-size: 16px;
     padding: 8px 26px;
